--- a/index.html
+++ b/index.html
@@ -13,27 +13,66 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-NCNMP4FJ");
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <link rel="stylesheet" href="./styles/style.css" />
     <title>Dr Bactéria - Vida sem Germes</title>
     <script>
-      !function(f,b,e,v,n,t,s)
-      {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-      n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-      if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-      n.queue=[];t=b.createElement(e);t.async=!0;
-      t.src=v;s=b.getElementsByTagName(e)[0];
-      s.parentNode.insertBefore(t,s)}(window, document,'script',
-      'https://connect.facebook.net/en_US/fbevents.js');
-      fbq('init', '788385176470510');
-      fbq('track', 'PageView');
-      </script>
-      <noscript><img height="1" width="1" style="display:none"
-      src="https://www.facebook.com/tr?id=788385176470510&ev=PageView&noscript=1"
-      /></noscript>
+      !(function (f, b, e, v, n, t, s) {
+        if (f.fbq) return;
+        n = f.fbq = function () {
+          n.callMethod
+            ? n.callMethod.apply(n, arguments)
+            : n.queue.push(arguments);
+        };
+        if (!f._fbq) f._fbq = n;
+        n.push = n;
+        n.loaded = !0;
+        n.version = "2.0";
+        n.queue = [];
+        t = b.createElement(e);
+        t.async = !0;
+        t.src = v;
+        s = b.getElementsByTagName(e)[0];
+        s.parentNode.insertBefore(t, s);
+      })(
+        window,
+        document,
+        "script",
+        "https://connect.facebook.net/en_US/fbevents.js"
+      );
+      fbq("init", "788385176470510");
+      fbq("track", "PageView");
+    </script>
+    <noscript
+      ><img
+        height="1"
+        width="1"
+        style="display: none"
+        src="https://www.facebook.com/tr?id=788385176470510&ev=PageView&noscript=1"
+    /></noscript>
   </head>
 
   <body>
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-NCNMP4FJ"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe
+    ></noscript>
     <main>
       <section class="hero container">
         <div class="hero__content">
@@ -250,7 +289,7 @@
             <div class="swiper-button-next swiper-btn"></div>
           </div>
         </section>
-        <section class="presentation container">
+        <section class="presentation">
           <aside class="presentation__img"></aside>
           <article class="presentation__infos">
             <img src="./assets/icons/video.svg" alt="" />
@@ -269,7 +308,67 @@
             </p>
           </article>
         </section>
+        <section class="event">
+          <div class="event__texts">
+            <p class="event__text">
+              Este evento é para você que deseja assumir o controle da saúde
+              ambiental da sua casa, garantindo que seus entes queridos estejam
+              protegidos.
+            </p>
+            <div class="event__text">
+              <img
+                src="./assets/icons/white-logo.svg"
+                alt="Vida sem Germes do Mal"
+              />
+              <p>
+                É mais do que um evento;<br />é um movimento em direção a uma
+                vida mais segura, saudável e consciente.
+              </p>
+            </div>
+          </div>
+          <div class="event__info">
+            <div class="info">
+              <img
+                class="info__img"
+                src="./assets/icons/calendar.svg"
+                alt="Calendário"
+              />
+              <h4 class="info__title">28 de Março quinta-feira</h4>
+            </div>
+            <div class="info">
+              <img
+                class="info__img"
+                src="./assets/icons/clock.svg"
+                alt="Relógio"
+              />
+              <h4 class="info__title">20 horas</h4>
+            </div>
+            <div class="info">
+              <img
+                class="info__img"
+                src="./assets/icons/location-dot.svg"
+                alt="Simbolo Localização"
+              />
+              <h4 class="info__title">100% online e gratuito</h4>
+            </div>
+          </div>
+        </section>
       </div>
+      <section class="course-cta">
+        <div class="course-cta__container">
+          <div class="promo">Vagas Limitadas</div>
+          <p class="course-cta__text">
+            Aproveite esta oportunidade única de aprender com o melhor no
+            assunto.
+          </p>
+          <button class="green-btn">Inscreva-se agora gratuitamente</button>
+          <p class="course-cta__text">
+            e dê o primeiro passo para transformar
+            <span> lar em um refúgio de saúde e bem-estar.</span>
+          </p>
+        </div>
+      </section>
+      <section></section>
     </main>
     <script src="./scripts/script.js"></script>
   </body>
