--- a/index.html
+++ b/index.html
@@ -89,13 +89,10 @@
             DIRETO DO ESPECIALISTA DR. BACTÉRIA
           </p>
           <div class="hero__description">
-            <strong class="orange title"
-              >TRANSFORME SEU LAR EM UM AMBIENTE DE BEM-ESTAR</strong
-            >
             <p>
-              Com métodos comprovados e fáceis de seguir, o Dr. Bactéria guiará
-              você por um caminho de saúde impenetrável, adequado para todas as
-              idades
+              Transforme seu lar em um ambiente de bem-estar! Com métodos
+              comprovados e fáceis de seguir, o Dr. Bactéria guiará você por um
+              caminho de saúde impenetrável, adequado para todas as idades
             </p>
           </div>
           <form class="hero__form" method="post">
@@ -129,7 +126,7 @@
             <input
               class="green-btn"
               type="submit"
-              value="Quero Assistir a Aula Agora!"
+              value="Quero Assistir a essa Aula!"
             />
           </form>
         </div>
@@ -439,7 +436,7 @@
           <input
             class="green-btn"
             type="submit"
-            value="Quero Assistir a Aula Agora!"
+            value="Quero Assistir a Aula!"
           />
         </form>
       </section>
