Updating Hero Section

--- a/index.html
+++ b/index.html
@@ -76,59 +76,25 @@
     <main>
       <section class="hero container">
         <div class="hero__content">
-          <div class="centralized">
+          <div>
             <img
               class="main-logo"
               src="./assets/icons/logo-horizontal.svg"
               alt="Vida sem Germes do mal"
             />
           </div>
-          <p class="hero__main-content">
+          <p class="hero__sub-title">
+            O segredo para uma casa saudável e segura
+          </p>
+          <p class="hero__title">
             DESCUBRA COMO PROTEGER SUA FAMÍLIA DE DOENÇAS COM
             <strong class="orange">DICAS SIMPLES E EFICAZES DE HIGIENE</strong>,
             DIRETO DO ESPECIALISTA DR. BACTÉRIA
           </p>
-          <div class="hero__description">
-            <p>
-              Transforme seu lar em um ambiente de bem-estar! Com métodos
-              comprovados e fáceis de seguir, o Dr. Bactéria guiará você por um
-              caminho de saúde impenetrável, adequado para todas as idades
-            </p>
-          </div>
-          <form data-form class="hero__form" method="post">
-            <div class="col-2">
-              <input
-                class="default-input"
-                type="text"
-                name="complete-name"
-                id="complete-name"
-                placeholder="Seu nome"
-                required
-              />
-              <input
-                class="default-input"
-                type="tel"
-                name="whatsapp"
-                id="whatsapp"
-                placeholder="Seu Whatsapp"
-                pattern="^(\+55\s?)?(\([1-9]{2}\)\s?)?9([0-9]{4})-?([0-9]{4})$"
-                required
-              />
-            </div>
-            <input
-              class="default-input"
-              type="email"
-              name="email"
-              id="email"
-              placeholder="Seu Email"
-              required
-            />
-            <input
-              class="green-btn"
-              type="submit"
-              value="Quero Assistir a essa Aula!"
-            />
-          </form>
+          <p class="orange hero__description">
+            Transforme seu lar em um ambiente de bem-estar
+          </p>
+          <button class="green-btn">Cadastre-se para assistir a aula</button>
         </div>
         <img
           class="hero__image"
@@ -478,7 +444,9 @@
         <footer class="footer">
           <ul class="social-media">
             <li>
-              <a class="footer__link" href="https://www.instagram.com/drbacteriaoficial/"
+              <a
+                class="footer__link"
+                href="https://www.instagram.com/drbacteriaoficial/"
                 ><img
                   src="./assets/icons/instagram.svg"
                   alt=""
@@ -486,7 +454,9 @@
               >
             </li>
             <li>
-              <a class="footer__link" href="https://www.facebook.com/drbacteriaoficial"
+              <a
+                class="footer__link"
+                href="https://www.facebook.com/drbacteriaoficial"
                 ><img
                   src="./assets/icons/facebook.svg"
                   alt=""
@@ -494,7 +464,10 @@
               >
             </li>
             <li>
-              <a class="footer__link" href="https://www.tiktok.com/@drbacteriaoficial">
+              <a
+                class="footer__link"
+                href="https://www.tiktok.com/@drbacteriaoficial"
+              >
                 <img
                   src="./assets/icons/tiktok.svg"
                   alt=""
